# hack_attack

./: .gitignore  README.txt  index.html
77A22F/globoblog/: package-lock.json  package.json
77A22F/globoblog/src/: env.js
77A_22F/: README.md
77A_22F/globoblog/: .env.example  .eslintrc.cjs  next.config.js  tailwind.config.ts
77A_22F/globoblog/prisma/: mock-data.ts  schema.prisma  seed.ts
AudioWizards/: Dockerfile  Makefile  README.md  docker-compose.yml
AudioWizards/app/: App.jsx  android.keystore  app.json  credentials.json  eas.json  package.json  tsconfig.json
AudioWizards/app/types/: react-native-audio-toolkit.d.ts
Calmcorners/certs/: selfsigned.crt
Calmcorners/src/: index.html
Calmcorners/src/js/: ar.js
Calmcorners/src/page/: found.html
Create_Build_Master/css/: styles.css
Create_Build_Master/js/: scripts.js
Disamplifon/src/static/: mecho.html
LeSunshine/noise_monitor/: .env  requirements.txt
Le_follie_del_programmatore/: selenity.py
The_Noisy_Checkers/: README.md  docker-compose.yaml
calmcorners/: Dockerfile  readme.txt
calmcorners/certs/: selfsigned.key
calmcorners/src/: server.py
le follie del programmatore/: requirements
les_pingouins_silencieux/: README.md
sondus/: readme.md  requirements.txt  sim.py
sondus/templates/: index.html
suckablyat/: README.md  ui.txt
thenoisychekers/: README.md
thenoisychekers/api/: pyproject.toml
thenoisychekers/api/api/: models.py
thenoisychekers/api/data/: noise_data.json
thenoisychekers/api/tests/: test_app.py
thenoisychekers/frontend/: folium_map.py
(+63 files in other folders)
