[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Julio Formiga <julio.formiga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.7.4"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
psycopg = "^3.1.19"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
